--- a/crowdvest-app/firebase.json
+++ b/crowdvest-app/firebase.json
@@ -4,6 +4,9 @@
   },
   "hosting": {
     "site": "crowdvest",
-    "public": "public"
+    "public": "build",
+    "headers": [
+      {"source": "/service-worker.js", "headers": [{"key": "Cache-Control", "value": "no-cache"}]}
+    ]
   }
 }
