--- a/crowdvest-app/package.json
+++ b/crowdvest-app/package.json
@@ -2,10 +2,14 @@
   "name": "crowdvest-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://crowdvest.firebaseapp.com/",
   "dependencies": {
     "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
-    "react-scripts": "0.9.5"
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "0.9.5",
+    "recompose": "^0.30.0"
   },
   "devDependencies": {},
   "scripts": {
