--- a/crowdvest-app/package.json
+++ b/crowdvest-app/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "homepage": "https://crowdvest.firebaseapp.com/",
   "dependencies": {
+    "firebase": "^6.2.4",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
+    "react-native-google-sign-in": "^1.0.16",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "0.9.5",
+    "react-scripts": "^0.9.5",
     "recompose": "^0.30.0"
   },
   "devDependencies": {},
