--- a/crowdvest-app/package.json
+++ b/crowdvest-app/package.json
@@ -8,6 +8,7 @@
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
+    "react-horizontal-scrolling-menu": "^0.7.0",
     "react-native-google-sign-in": "^1.0.16",
     "react-router-dom": "^5.0.1",
     "react-scripts": "^0.9.5",
