--- a/crowdvest-app/package.json
+++ b/crowdvest-app/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://crowdvest.firebaseapp.com/",
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "firebase": "^6.2.4",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
